--- a/.github/workflows/base.yml
+++ b/.github/workflows/base.yml
@@ -37,4 +37,4 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            ghcr.io/darksaid98/yolks:${{ matrix.oses }}
+            ghcr.io/hakkodev/yolks:${{ matrix.oses }}
