--- a/.github/workflows/bun.yml
+++ b/.github/workflows/bun.yml
@@ -36,4 +36,4 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            ghcr.io/darksaid98/yolks:bun_${{ matrix.tag }}
+            ghcr.io/hakkodev/yolks:bun_${{ matrix.tag }}
