--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -41,4 +41,4 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            ghcr.io/darksaid98/yolks:dotnet_${{ matrix.tag }}
+            ghcr.io/hakkodev/yolks:dotnet_${{ matrix.tag }}
