--- a/.github/workflows/erlang.yml
+++ b/.github/workflows/erlang.yml
@@ -38,4 +38,4 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            ghcr.io/darksaid98/yolks:erlang_${{ matrix.tag }}
+            ghcr.io/hakkodev/yolks:erlang_${{ matrix.tag }}
