--- a/.github/workflows/graalvm.yml
+++ b/.github/workflows/graalvm.yml
@@ -36,4 +36,4 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            ghcr.io/darksaid98/yolks:graalvm_${{ matrix.tag }}
+            ghcr.io/hakkodev/yolks:graalvm_${{ matrix.tag }}
