--- a/.github/workflows/mono.yml
+++ b/.github/workflows/mono.yml
@@ -34,4 +34,4 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            ghcr.io/darksaid98/yolks:mono_${{ matrix.tag }}
+            ghcr.io/hakkodev/yolks:mono_${{ matrix.tag }}
