--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -44,4 +44,4 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            ghcr.io/darksaid98/yolks:nodejs_${{ matrix.tag }}
+            ghcr.io/hakkodev/yolks:nodejs_${{ matrix.tag }}
