--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -42,4 +42,4 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            ghcr.io/darksaid98/yolks:python_${{ matrix.tag }}
+            ghcr.io/hakkodev/yolks:python_${{ matrix.tag }}
