--- a/.github/workflows/steamcmd.yml
+++ b/.github/workflows/steamcmd.yml
@@ -37,4 +37,4 @@ jobs:
           platforms: linux/amd64
           push: true
           tags: |
-            ghcr.io/hakkodev/steamcmd:${{ matrix.distro }}
+            ghcr.io/andyyy7666/steamcmd:${{ matrix.distro }}
