--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -51,7 +51,7 @@ jobs:
           cache-to: type=local,dest=/tmp/.buildx-cache-new
           push: true
           tags: |
-            ghcr.io/hakkodev/yolks:bot_${{ matrix.tag }}
+            ghcr.io/andyyy7666/yolks:bot_${{ matrix.tag }}
       - name: Move cache
         run: |
           rm -rf /tmp/.buildx-cache
@@ -83,4 +83,4 @@ jobs:
   #         platforms: linux/amd64
   #         push: true
   #         tags: |
-  #           ghcr.io/hakkodev/yolks:bot_${{ matrix.tag }}
+  #           ghcr.io/andyyy7666/yolks:bot_${{ matrix.tag }}
