--- a/.github/workflows/cassandra.yml
+++ b/.github/workflows/cassandra.yml
@@ -35,4 +35,4 @@ jobs:
           platforms: linux/amd64
           push: true
           tags: |
-            ghcr.io/hakkodev/yolks:cassandra_${{ matrix.tag }}
+            ghcr.io/andyyy7666/yolks:cassandra_${{ matrix.tag }}
