--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -43,4 +43,4 @@ jobs:
           platforms: linux/amd64
           push: true
           tags: |
-            ghcr.io/hakkodev/yolks:go_${{ matrix.tag }}
+            ghcr.io/andyyy7666/yolks:go_${{ matrix.tag }}
