--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -43,4 +43,4 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            ghcr.io/hakkodev/yolks:java_${{ matrix.tag }}
+            ghcr.io/andyyy7666/yolks:java_${{ matrix.tag }}
