--- a/.github/workflows/mariadb.yml
+++ b/.github/workflows/mariadb.yml
@@ -40,4 +40,4 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            ghcr.io/hakkodev/yolks:mariadb_${{ matrix.tag }}
+            ghcr.io/andyyy7666/yolks:mariadb_${{ matrix.tag }}
