--- a/.github/workflows/mongodb.yml
+++ b/.github/workflows/mongodb.yml
@@ -38,4 +38,4 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            ghcr.io/hakkodev/yolks:mongodb_${{ matrix.tag }}
+            ghcr.io/andyyy7666/yolks:mongodb_${{ matrix.tag }}
