--- a/.github/workflows/postgres.yml
+++ b/.github/workflows/postgres.yml
@@ -41,4 +41,4 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            ghcr.io/hakkodev/yolks:postgres_${{ matrix.tag }}
+            ghcr.io/andyyy7666/yolks:postgres_${{ matrix.tag }}
