--- a/.github/workflows/redis.yml
+++ b/.github/workflows/redis.yml
@@ -38,4 +38,4 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            ghcr.io/hakkodev/yolks:redis_${{ matrix.tag }}
+            ghcr.io/andyyy7666/yolks:redis_${{ matrix.tag }}
