--- a/.github/workflows/wine.yml
+++ b/.github/workflows/wine.yml
@@ -36,4 +36,4 @@ jobs:
           platforms: linux/amd64
           push: true
           tags: |
-            ghcr.io/hakkodev/yolks:wine_${{ matrix.tag }}
+            ghcr.io/andyyy7666/yolks:wine_${{ matrix.tag }}
